--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
       <div id="header">
         <div id="logo">
           <h1>
-            <span id="orange">T</span>H
-            <span id="pink">E</span> F
-            <span id="green">U</span>N
-            <span id="red">Z</span> O
-            <span id="yellow">N</span>E
+            <span id="orange">T</span>H<span id="pink">E</span> F<span id="white">U</span>N
+            <span id="red">Z</span>O<span id="yellow">N</span>E
           </h1>
 
         </div>
@@ -25,7 +22,8 @@
   </div>
   <div id="section1">
     <div id="sectionContent1" class="sectionContent">
-      <h2>Lorem Ipsum</h2>
+      <h2><span id="orange">L</span>O<span id="blue">R</span>E<span id="yellow">M  </span>     I<span id="red">P</span>S<span id="yellow">U</span>M
+      </h2>     
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Facere, nobis. Quas, ratione ut. Omnis cupiditate assumenda
@@ -41,7 +39,7 @@
 
   <div id="section2">
     <div id="sectionContent2" class="sectionContent">
-      <h2>Lorem Ipsum</h2>
+      <h2><span id="orange">L</span>O<span id="pink">R</span>E<span id="green">M  </span>   I<span id="red">P</span>S<span id="yellow">U</span>M</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Facere, nobis. Quas, ratione ut. Omnis cupiditate assumenda
@@ -50,14 +48,14 @@
         error ab reprehenderit dicta. Vero a ratione sunt est
         ab cupiditate autem, libero voluptatum, harum, corporis
         similique nobis voluptas earum ducimus recusandae incidunt ut.
-        Temporibus doloribus enim ex quos.
+        Temporibus doloribus enim ex quos
       </p>
     </div>
   </div>
 
   <div id="section3">
     <div id="sectionContent3" class="sectionContent">
-      <h2>Lorem Ipsum</h2>
+      <h2><span id="orange">L</span>O<span id="green">R</span>E<span id="orange">M   </span>I<span id="green">P</span>S<span id="yellow">U</span>M</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Facere, nobis. Quas, ratione ut. Omnis cupiditate assumenda
@@ -73,7 +71,7 @@
 
   <div id="section4">
     <div id="sectionContent4" class="sectionContent">
-      <h2>Lorem Ipsum</h2>
+      <h2><span id="orange">L</span>O<span id="green">R</span>E<span id="orange">M   </span>I<span id="red">P</span>S<span id="yellow">U</span>M</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Facere, nobis. Quas, ratione ut. Omnis cupiditate assumenda
@@ -89,7 +87,7 @@
 
   <div id="section5">
     <div id="sectionContent5" class="sectionContent">
-      <h2>Lorem Ipsum</h2>
+      <h2><span id="orange">L</span>O<span id="green">R</span>E<span id="orange">M  </span>I<span id="red">P</span>S<span id="yellow">U</span>M</h2>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Facere, nobis. Quas, ratione ut. Omnis cupiditate assumenda
